--- a/team1/pom.xml
+++ b/team1/pom.xml
@@ -17,8 +17,8 @@
 		<!-- Spring -->
 		<dependency>
 			<groupId>org.springframework</groupId>
-			<artifactId>spring-context</artifactId>
-			<version>${org.springframework-version}</version>
+				<artifactId>spring-context</artifactId>
+				<version>${org.springframework-version}</version>
 			<exclusions>
 				<!-- Exclude Commons Logging in favor of SLF4j -->
 				<exclusion>
@@ -157,14 +157,17 @@
     <version>4.1.7.RELEASE</version>
     <scope>test</scope>
 </dependency>
-
-<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-email -->
-<dependency>
-    <groupId>org.apache.commons</groupId>
-    <artifactId>commons-email</artifactId>
-    <version>1.5</version>
-</dependency>
-
+<!-- mail -->
+ 		<dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>${org.springframework-version}</version>
+        </dependency>
+	<dependency>
+		<groupId>com.sun.mail</groupId>
+		<artifactId>javax.mail</artifactId>
+		<version>1.6.1</version>
+	</dependency>
 
 <!-- spring-jdbc 연관 라이브러리로 추가됨 -->
 <!-- https://mvnrepository.com/artifact/org.springframework/spring-tx -->
